adds app properties in yml file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,4 @@
-spring.application.name=git statuspaypal-integration
+paypal:
+  client-id: CLIENT_ID
+  client-secret: CLIENT_SECRET
+  mode: sandbox # 'sandox' for testing, 'live' for production
